# oh-my-ib

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.pipeline/: current.json  roles.yaml
.pipeline/agent-help-logs/: CONTEXT.md  PRD.md  arch.md  journal.md
.pipeline/agents-md/: PRD.md  arch.md  journal.md
.pipeline/brief-command/: CONTEXT.md  PRD.md  arch.md  journal.md
.pipeline/close-pending-guard/: CONTEXT.md  PRD.md  arch.md  journal.md
.pipeline/completed-orders/: CONTEXT.md  PRD.md  arch.md  journal.md
.pipeline/connect-retry/: PRD.md  arch.md  journal.md
.pipeline/executions-command/: CONTEXT.md  PRD.md  arch.md  journal.md
.pipeline/grid-tick/: CONTEXT.md  PRD.md  arch.md  journal.md
docs/: write-path-semantics.md
src/: audit.rs  cli.rs  config.rs  error.rs  grid.rs  lib.rs  main.rs  output.rs  surface.rs  tz.rs
src/ib/: account.rs  (+19 more)
tests/: agents_md.rs  brief_command.rs  claude_md.rs  cli_contract.rs  close_pending_guard.rs  completed_orders_command.rs  connect_retry.rs  data_commands.rs  executions_command.rs  grid_tick.rs  help_command.rs  live_combo_unlock.rs  live_write_guardrail.rs  logs_command.rs  multi_quote.rs  option_chain_command.rs  option_chain_filter.rs  option_close_command.rs  option_combo_command.rs  option_orders_command.rs  option_quote_command.rs  order_account_stamp.rs  order_preview_command.rs  outside_rth.rs  pnl_by_position_command.rs  pnl_command.rs  positions_row.rs  quote_ticks.rs  read_timeouts.rs  search_command.rs  sma_signal.rs  sma_tick.rs  stk_orders_command.rs  tz_aliases.rs  write_path_semantics_doc.rs
(+213 files in other folders)
