[package]
name = "oh-my-ib"
version = "0.1.0"
edition = "2021"
description = "Read-only Interactive Brokers CLI (TWS API via ibapi), driven by an LLM agent."
license = "MIT"
repository = "https://github.com/jackypanster/oh-my-ib"

[lib]
name = "oh_my_ib"
path = "src/lib.rs"

[[bin]]
name = "omi"
path = "src/main.rs"

[dependencies]
ibapi = { version = "3.1", default-features = false, features = ["sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
